# aech-cli-visualize

./: .env.example  .gitignore  README.md  pyproject.toml
src/aech_cli_visualize/: __init__.py  main.py  manifest.json  model_utils.py
src/aech_cli_visualize/config/: __init__.py  analyzer.py  fingerprint.py  models.py  repository.py
src/aech_cli_visualize/dashboard/: __init__.py  composer.py  validated_composer.py
src/aech_cli_visualize/iterate/: __init__.py  modifier.py
src/aech_cli_visualize/skills/dashboard-designer/: SKILL.md
src/aech_cli_visualize/skills/dashboard-designer/scripts/: generate_recommendations.py
src/aech_cli_visualize/themes/: __init__.py  loader.py
src/aech_cli_visualize/utils/: __init__.py  data.py  export.py
src/aech_cli_visualize/validation/: __init__.py  corrections.py  models.py  vlm_validator.py
src/aech_cli_visualize/widgets/: __init__.py  base.py  chart.py  gauge.py  kpi.py  table.py
tests/: test_sales_data.json
